--- a/learn/src/app/app.component.html
+++ b/learn/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!-- <router-outlet></router-outlet> -->
+<mat-slider min="1" max="100" step="1" value="1"></mat-slider>
+
 <app-child [item] ="'chield'" (newItemEvent)="addItem($event)"></app-child>
 
 <ul>
